[gd_scene load_steps=3 format=3 uid="uid://csjvt7i08xnb"]

[ext_resource type="Script" uid="uid://bjhi0ouse8pwq" path="res://RhythmBattle/rhythm_battle.gd" id="1_u4xp1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k414p"]

[node name="RhythmSection" type="Node2D"]
script = ExtResource("1_u4xp1")

[node name="Lanes" type="Node2D" parent="."]

[node name="Lane_Tonic" type="Node2D" parent="Lanes"]

[node name="TargetZone" type="Area2D" parent="Lanes/Lane_Tonic"]

[node name="TargetZone2" type="CollisionShape2D" parent="Lanes/Lane_Tonic/TargetZone"]
shape = SubResource("CircleShape2D_k414p")

[node name="Lane_Median" type="Node2D" parent="Lanes"]

[node name="TargetZone" type="Area2D" parent="Lanes/Lane_Median"]

[node name="TargetZone2" type="CollisionShape2D" parent="Lanes/Lane_Median/TargetZone"]
shape = SubResource("CircleShape2D_k414p")

[node name="Lane_Dominant" type="Node2D" parent="Lanes"]

[node name="TargetZone" type="Area2D" parent="Lanes/Lane_Dominant"]

[node name="TargetZone2" type="CollisionShape2D" parent="Lanes/Lane_Dominant/TargetZone"]
shape = SubResource("CircleShape2D_k414p")

[node name="NoteSpawner" type="Node2D" parent="."]

[node name="MozikUI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="MozikUI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="ComboLabel" type="Label" parent="MozikUI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Mozik" type="AudioStreamPlayer2D" parent="."]
